OrderServiceImpl: заменено на метод toList()